--- a/php-scaffold/docker-compose.yml
+++ b/php-scaffold/docker-compose.yml
@@ -1,11 +1,36 @@
+nginx:
+    image: nginx
+    restart: always
+    volumes:
+        - /etc/localtime:/etc/localtime:ro
+        - conf/nginx:/etc/nginx:ro
+        - log/nginx:/var/log/nginx
+        - data/html:/usr/share/nginx/html
+    ports:
+        - "80:80"
+    links:
+        - phpfpm
+
 phpfpm:
     build: image/phpfpm
     restart: always
     volumes:
-        - conf/phpfpm/supervisor/conf.d:/etc/supervisor/conf.d
-        - conf/phpfpm/php-fpm.conf:/etc/php-fpm.conf
-        - conf/phpfpm/php:/etc/php
+        - /etc/localtime:/etc/localtime:ro
+        - conf/phpfpm/supervisor/conf.d:/etc/supervisor/conf.d:ro
+        - conf/phpfpm/php-fpm.conf:/etc/php-fpm.conf:ro
+        - conf/phpfpm/php:/etc/php:ro
         - log/phpfpm:/var/log/php-fpm
-        - data/html:/usr/share/nginx/html
-    ports:
-        - "9000:9000"
+    expose:
+        - "9000"
+    links:
+        - redis
+
+redis:
+    image: redis
+    restart: always
+    volumes:
+        - data/redis:/data
+        - conf/redis/redis.conf:/etc/redis.conf
+    expose:
+        - "6379"
+    command: redis-server /etc/redis.conf --appendonly yes
