--- a/php-scaffold/docker-compose.yml
+++ b/php-scaffold/docker-compose.yml
@@ -20,6 +20,7 @@ phpfpm:
         - conf/phpfpm/php-fpm.conf:/etc/php-fpm.conf:ro
         - conf/phpfpm/php:/etc/php:ro
         - log/phpfpm:/var/log/php-fpm
+        - data/html:/usr/share/nginx/html
     expose:
         - "9000"
     links:
