--- a/php-scaffold/conf/nginx/conf.d/default.conf
+++ b/php-scaffold/conf/nginx/conf.d/default.conf
@@ -5,6 +5,22 @@ server {
     #charset koi8-r;
     #access_log  /var/log/nginx/log/host.access.log  main;
 
+    client_max_body_size 200M;
+
+    gzip  on;
+    gzip_static on;
+    gzip_http_version 1.0;
+    gzip_disable "MSIE [1-6].";
+    gzip_vary on;
+
+    gzip_comp_level 9;
+    gzip_proxied any;
+    gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+    fastcgi_buffers 8 16k;
+    fastcgi_buffer_size 32k;
+    fastcgi_read_timeout 180;
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
@@ -17,6 +33,12 @@ server {
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
+    }
+
+    location ~* \.(?:ico|gif|jpe?g|png)$ {
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
