add some nginx conf

--- a/php-scaffold/conf/nginx/conf.d/default.conf
+++ b/php-scaffold/conf/nginx/conf.d/default.conf
@@ -20,6 +20,7 @@ server {
     fastcgi_buffers 8 16k;
     fastcgi_buffer_size 32k;
     fastcgi_read_timeout 180;
+    fastcgi_intercept_errors off;
 
     location / {
         root   /usr/share/nginx/html;
@@ -63,5 +64,11 @@ server {
     #location ~ /\.ht {
     #    deny  all;
     #}
+    location = /robots.txt  { access_log off; log_not_found off; }
+    location = /favicon.ico { access_log off; log_not_found off; }
+    # stops hidden files from being served
+    location ~ /\.          { access_log off; log_not_found off; deny all; }
+    # prevents temporary files being served such as those created when editing files with vim
+    location ~ ~$           { access_log off; log_not_found off; deny all; }
 }
 
