--- a/pyramid-scaffold/app/requirements.txt
+++ b/pyramid-scaffold/app/requirements.txt
@@ -1,22 +1,26 @@
 Babel==1.3
-Beaker==1.6.5.post1
+Beaker==1.7.0
 Chameleon==2.22
 FormEncode==1.3.0
 Mako==1.0.1
 MarkupSafe==0.23
-lingua
+lingua==3.10
 PasteDeploy==1.5.2
 Pygments==2.0.2
-redis==2.10.3
-SQLAlchemy==1.0.0
+SQLAlchemy==1.0.6
 WebOb==1.4.1
+pytz
 argparse==1.2.1
-pyramid==1.5.6
+colander==1.0
+deform==2.0a2
+pycrypto==2.6.1
+pyramid==1.6a2
 pyramid-beaker==0.8
 pyramid-chameleon==0.3
-pyramid-debugtoolbar==2.3
+pyramid-debugtoolbar==2.4
 pyramid-mako==1.0.2
-pyramid-tm==0.11
+pyramid-tm==0.12
+redis==2.9.1
 repoze.lru==0.6
 transaction==1.4.3
 translationstring==1.3
