--- a/pyramid-scaffold/app/requirements.txt
+++ b/pyramid-scaffold/app/requirements.txt
@@ -1,18 +1,7 @@
-Babel==1.3
-Beaker==1.7.0
-Chameleon==2.22
-FormEncode==1.3.0
-Mako==1.0.1
-MarkupSafe==0.23
-lingua==3.10
-PasteDeploy==1.5.2
-Pygments==2.0.2
-SQLAlchemy==1.0.6
-WebOb==1.4.1
-pytz
-argparse==1.2.1
-colander==1.0
+Babel==2.0
+WebTest==2.0.9
 deform==2.0a2
+lingua==3.11
 pycrypto==2.6.1
 pyramid==1.6a2
 pyramid-beaker==0.8
@@ -20,13 +9,9 @@ pyramid-chameleon==0.3
 pyramid-debugtoolbar==2.4
 pyramid-mako==1.0.2
 pyramid-tm==0.12
-redis==2.9.1
-repoze.lru==0.6
-transaction==1.4.3
-translationstring==1.3
-venusian==1.0
+redis==2.10.3
+simplejson==3.8.0
 waitress==0.8.9
-wsgiref==0.1.2
-zope.deprecation==4.1.2
-zope.interface==4.1.2
 zope.sqlalchemy==0.7.6
+nose==1.3.7
+requests==2.7.0
