some modification of docker file

--- a/pyramid-scaffold/app/Dockerfile
+++ b/pyramid-scaffold/app/Dockerfile
@@ -1,27 +1,38 @@
 # start with a base image
 FROM ubuntu:14.10
 
+# change default source list
 ADD sources.list /etc/apt/sources.list
+
+# change default UTC timezone to Asia/Shanghai
+# use -v /etc/localtime:/etc/localtime instead if available
+RUN echo "Asia/Shanghai" > /etc/timezone
+RUN dpkg-reconfigure -f noninteractive tzdata
 
 RUN apt-get update && \
     apt-get install python-all-dev \
-                    python-pip \
+                    autoconf \
                     zlib1g-dev \
                     libmysqlclient-dev \
                     mysql-client \
+                    python-crypto \
                     python-mysqldb \
                     supervisor -y && \
     apt-get autoremove
 
+# install python pip, python-pip is out of date
+ADD get-pip.py /source/get-pip.py
+RUN python /source/get-pip.py --trusted-host pypi.douban.com -i http://pypi.douban.com/simple
+
 # add requirements.txt and install
-ADD requirements.txt /code/requirements.txt
-RUN pip install -r /code/requirements.txt -i http://pypi.douban.com/simple
+ADD requirements.txt /source/requirements.txt
+RUN pip install -r /source/requirements.txt  --trusted-host pypi.douban.com -i http://pypi.douban.com/simple
 
 ADD supervisor.conf /etc/supervisor/supervisord.conf
 
 EXPOSE 6543
-VOLUME /code
+VOLUME /source
 
-WORKDIR /code
+WORKDIR /source
 
 CMD ["/usr/bin/supervisord"]
