--- a/web/docker-compose.pyramid-mac.yml
+++ b/web/docker-compose.pyramid-mac.yml
@@ -1,5 +1,5 @@
-app:
-    build: app
+pyramid:
+    build: images/pyramid
     restart: on-failure:10
     volumes:
         - ./source:/source
@@ -11,11 +11,11 @@ app:
         - redis
         - mysql
 mysql:
-    image: "mysql"
+    build: images/macmysql
     restart: always
     volumes:
-        - data/mysql:/var/lib/mysql
-        - conf/mysql:/etc/mysql/conf.d
+        - ./data/mysql:/var/lib/mysql:rw
+        - ./conf/mysql:/etc/mysql/conf.d:ro
     expose:
         - "3306"
     environment:
@@ -27,8 +27,8 @@ redis:
     image: redis
     restart: always
     volumes:
-        - data/redis:/data
-        - conf/redis/redis.conf:/etc/redis.conf
+        - ./data/redis:/data
+        - ./conf/redis/redis.conf:/etc/redis.conf
     expose:
         - "6379"
-    command: redis-server /etc/redis.conf --appendonly yes
+    command: redis-server /etc/redis.conf
