add supervisor conf file for test project

--- a/web/conf/supervisor/test_pyramid.conf
+++ b/web/conf/supervisor/test_pyramid.conf
@@ -1,9 +1,9 @@
-[program:openapi]
-environment=PYTHONPATH="/source/opencore:/source/openapi"
-command=gunicorn --paster openapi.ini
-process_name=openapi
+[program:test_pyramid]
+environment=PYTHONPATH="/source/test_pyramid"
+command=gunicorn --paster development.ini
+process_name=test_pyramid
 numprocs=1
-directory=/source/openapi
+directory=/source/test_pyramid
 umask=022
 priority=1
 autostart=true
@@ -12,11 +12,11 @@ startsecs=15
 startretries=5
 user=root
 redirect_stderr=false
-stdout_logfile=/log/supervisor/openapi-out.log
+stdout_logfile=/log/supervisor/test_pyramid-out.log
 stdout_logfile_maxbytes=1MB
 stdout_logfile_backups=10
 stdout_capture_maxbytes=1MB
-stderr_logfile=/log/supervisor/openapi-err.log
+stderr_logfile=/log/supervisor/test_pyramid-err.log
 stderr_logfile_maxbytes=1MB
 stderr_logfile_backups=10
 stderr_capture_maxbytes=1MB
