--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ lib64/
 parts/
 sdist/
 var/
-*.egg-info/
+#*.egg-info/
 .installed.cfg
 *.egg
 
@@ -55,3 +55,5 @@ docs/_build/
 
 # PyBuilder
 target/
+
+web/data/mysql
