--- a/conf/nginx/conf.d/default.conf
+++ b/conf/nginx/conf.d/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen       8080;
+    listen       80;
     server_name  localhost;
 
     #charset koi8-r;
@@ -11,6 +11,14 @@ server {
 
         # proxy_pass  http://client-web-admin;
         # proxy_pass  http://srv-api;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend/admin/;
+    }
+
+    location /api/ {
+        proxy_pass http://backend/api/;
     }
 
     #error_page  404              /404.html;
